--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -402,7 +402,7 @@
         android:layout_y="330dp"/>
     <EditText
         android:id="@+id/edit_text_RestURL"
-        android:layout_width="300dp"
+        android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:textSize="12sp"
         android:layout_x="50dp"
@@ -424,18 +424,28 @@
         android:layout_y="370dp"
         android:text="Stop"/>
     <TextView
-        android:id="@+id/text_content"
-        android:layout_width="300dp"
+        android:id="@+id/text_Response"
+        android:layout_width="60dp"
         android:layout_height="wrap_content"
+        android:text="Response"
+        android:textSize="11sp"
+        android:textColor="#000" android:textStyle="bold"
+        android:layout_x="00dp"
+        android:layout_y="425dp"/>
+    <TextView
+        android:id="@+id/text_result"
+        android:layout_width="265dp"
+        android:layout_height="30dp"
         android:text=""
-        android:textColor="#000"
+        android:textColor="#FFFFFF"
+        android:background="#375D81"
         android:layout_x="50dp"
-        android:layout_y="415dp"/>
+        android:layout_y="420dp"/>
 
     <ImageView android:layout_height="50dp"
         android:layout_width="50dp" android:id="@+id/droidImageView"
         android:layout_x="150dp"
-        android:layout_y="450dp"
+        android:layout_y="460dp"
         android:src="@drawable/icon"></ImageView>
 
 </AbsoluteLayout>
